# arm-gcc-build

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Makefile
.eide/: eide.yml
.github/workflows/: build.yml  ci.yml
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: arm-none-eabi.cmake
docker/: Dockerfile
project/inc/: button_logic.h
project/src/: button_logic.c
tests/: Makefile  test_button_logic.c  unity.h
